--- a/SimonDice/35_comenzandoJuego.html
+++ b/SimonDice/35_comenzandoJuego.html
@@ -15,6 +15,8 @@
     Empezar a jugar!
     </button>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js">
+</script>
 <script type="text/javascript" src= "codigo.js">
     
 </script>
